@@ -6,6 +6,7 @@ Deluge 0.9.04 - "1.0.0_RC4" (In Development)
   * Fix selecting torrents when right-clicking on them, behaviour is now similar
      to Nautilus
   * Fix new release check
+  * Display 'total_wanted' instead of 'total_size' in Size column
   
 Deluge 0.9.03 - "1.0.0_RC3" (21 July 2008)
  Core:
